--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,7 +4,7 @@
         <div class="table" [class.animationTabChange]="activeTab == 'graph'">
         </div>
         <!-- pos absolute -->
-        <a >TABLE</a>
+        <a >Table</a>
 
     </div>
 
@@ -12,6 +12,6 @@
         <div class="graph" [class.animationTabChange]="activeTab == 'table'">
         </div>
         
-        <a >GRAPH</a>
+        <a >Graph</a>
     </div>
 </div>
