--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,3 +1,10 @@
+<div class="subline-wrapper">
+    <div class="subline">
+        SIMPLY TRACK your COINS 
+ 
+    </div>
+</div>
+
 <h1>TokenX</h1>
 <h1 id="offset">TokenX</h1>
 
