--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -29,12 +29,12 @@
     position: absolute;
     bottom: 10px;
     right: 60px;
-    color: whitesmoke;
+    color: var(--primary-light);
     font-size: 12px;
     cursor: pointer;
 
     &:hover {
-        color: var(--accent);
+        color: var(--accent1);
 
         &:after {
             width: 0px;
@@ -55,7 +55,7 @@
         content: "";
         width: 3rem;
         height: 1px;
-        background-color: white;
+        background-color: var(--primary-light);
         top: 50%;
         right: -3.5rem;
         position: absolute;
