--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -13,7 +13,7 @@
 .wrapper {
     height: 100%;
     width: 100%;
-    background-color: black;
+    background-color: var(--primary);
     overflow: auto;
 }
 
@@ -23,9 +23,9 @@ button {
     right: 80px;
     height: 35px;
     width: 100px;
-    color: white;
-    background-color: rgb(0, 0, 0);
-    border: 1px solid white;
+    color: var(--primary-light);
+    background-color: var(--accent1);
+    border: 1px solid var(--primary-light);
     border-radius: 25px;
 
     .pos-rel {
@@ -40,7 +40,7 @@ button {
         width: 33px;
         height: 33px;
         filter: invert(1);
-        background-color: rgba(149, 145, 145, 0.294);
+        background-color: var(--primary);
         border-radius: 50%;
     }
 
@@ -53,13 +53,13 @@ button {
 
     // button on hover
     &:hover {
-        background-color: white;
+        background-color: var(--primary-light);
         color: black;
         cursor: pointer;
         // transition: all 350ms ease-in-out;
 
         div {
-            background-color: rgba(255, 255, 255, 0.918);
+            background-color: var(--primary-light);
             border-radius: 16px;
         }
         img {
@@ -67,7 +67,7 @@ button {
             left: unset!important;
             filter: invert(0) !important;
             transition: all 250ms ease-in-out;
-            background-color: var(--accent);
+            background-color: var(--accent1);
 
             // animation: slideRight 250ms forwards;
         }
