--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -6,12 +6,12 @@
     // background-color: black;
     min-height: 30px;
     width: 100%;
-    color: white;
+    color: var(--primary);
     transition: all 200ms ease-in-out;
 }
 
 a{
-    color:white;
+    color: var(--primary);
     text-decoration: none;
     z-index: 100;
 }
@@ -35,7 +35,7 @@ a{
         &::after{
             content: '';
             // inactive background for graph tab
-            background-color: rgb(114, 114, 114);
+            background-color:  var(--muted);
             border-top-left-radius: 4px;
             border-top-right-radius: 16px;
             width: 100%;
@@ -57,7 +57,7 @@ a{
         &::after{
             content: '';
             // inactive background for table tab
-            background-color: rgb(114, 114, 114);
+            background-color: var(--muted);
             border-top-left-radius: 16px;
             border-top-right-radius: 4px;
             width: 100%;
@@ -88,7 +88,7 @@ a{
         border-right: 2px solid rgba(0, 0, 0, 0.24);
         height: 100%;
         // inactive background for graph tab
-        background-color:var(--bg-dark);
+        background-color:var(--secondary);
         border-top-left-radius: 4px;
         border-top-right-radius: 16px;
         z-index: 0;
@@ -105,7 +105,7 @@ a{
         padding-right: 25px;
         height: 100%;
              // active background for table tab
-        background-color:var(--bg-dark);
+        background-color:var(--secondary);
         border-top-left-radius: 16px;
         border-top-right-radius: 4px;
         z-index: 0;
