--- a/src/app/sidebar-mobil/sidebar-mobil.component.html
+++ b/src/app/sidebar-mobil/sidebar-mobil.component.html
@@ -1,3 +1,10 @@
-<h1>TokenX</h1>
-<h1 id="offset">TokenX</h1>
-
+<div class="wrapper">
+    <h1>TokenX</h1>
+<!--     
+    <div class="subline-wrapper">
+        <div class="subline">
+            SIMPLY TRACK your COINS
+        </div>
+    </div> -->
+    
+</div>
