--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -32,7 +32,7 @@
     background-color: var(--secondary);
     border-radius: 16px;
     padding: 55px 6px 40px 6px;
-    color: var(--primary);
+    color: var(--primary-light);
     width: 100%;
     min-height: 150px;
     margin-top: 22px;
