--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -3,6 +3,34 @@
     <div class="upperRow">
        <img class="image" src="{{ images[i] }}">
 
+        <div class="rankingNr"> 
+            <!-- <span class="MCR">MCR</span>  -->
+            {{ assetRanks[i] }}
+        </div>
+
+    </div>
+
+    <div class="infoPart">
+        <div class="row">
+            <span class="currPrice">Current Price</span>
+            <span class="currPriceNumber">€ {{ currentPrices[i].toFixed(2) }}</span>
+            <span 
+                class="changePercent" 
+                [class.red]="changePercent[i] == 0 || changePercent[i] < 0">
+                    <span *ngIf="changePercent[i] > 0">+</span>
+                {{ changePercent[i].toFixed(2) }}%
+            </span>
+    </div>
+
+    <!-- pos absolute -->
+    <div class="assetName">{{ assetNames[i] | titlecase }}</div>
+</div>
+
+
+<!-- <div *ngFor="let asset of assetNames.slice(0, 10); index as i" class="card">
+    <div class="upperRow">
+       <img class="image" src="{{ images[i] }}">
+
         <div class="rankingNr"> <span class="MCR">MCR</span> #{{ assetRanks[i] }}</div>
     </div>
 
@@ -21,8 +49,8 @@
      </div>
     </div>
 
-    <!-- pos absolute -->
+
     <div class="assetName">{{ assetNames[i] | titlecase }}</div>
 </div>
 
-
+ -->
