--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -7,6 +7,8 @@
         [(ngModel)]="amountInput" 
         (ngModelChange)="calculateExchange()" >
 
+               
+            <!-- position rel -->
     <div class="searchAssetContainer">
         <input 
             id='inputfieldSearchAsset'
