--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -33,6 +33,7 @@
     flex: 1;
     display: flex;
     margin-top: 26px;
+    text-align: justify;
 
     .icon-web {
         width: 24px;
@@ -52,23 +53,24 @@
 
     .websiteLink {
         position: relative;
-        margin-bottom: 12px;
         display: flex;
         align-items: center;
-        font-style: italic;
         color: var(--primary-light);
         cursor: pointer;
     }
 }
+// below Graph: website & Co.
+.furtherInfos {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    margin-bottom: 12px;
 
-.readMore {
-    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-    font-style: italic;
-    cursor: pointer;
-    color: var(--accent2);
-
-    &:hover {
-        color: var(--primary-light);
+    .detail {
+        border-left: 1px solid var(--primary-light);
+        margin-left: 8px;
+        padding-left: 12px
     }
 }
 
@@ -82,5 +84,17 @@
 
     @media (max-width: 1000px) {
         display: block;
+    }
+}
+
+.readMore {
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    font-style: italic;
+    cursor: pointer;
+    color: var(--accent2);
+    transition: all 120ms ease-in-out;
+
+    &:hover {
+        color: var(--primary-light);
     }
 }
