--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -11,14 +11,32 @@
 }
 
 .icon{
-    width: 20px;
-    margin-right: 4px;
+    width: 22px;
+    margin-right: 10px;
+    margin-top: 2px;
+    fill: red;
 }
-// Titles Graph and Titles
+// svg{
+//     width: 70px;
+//     height: 70px;
+//     color: red!important;
+//     fill: blue!important; 
+// }
 a{
-    color: var(--accent2);
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    transform: translateX(48%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
     z-index: 100;
+    color: var(--accent2);
+}
+
+.changeColor{
+    color: var(--secondary)!important;
 }
 
 .wrapperDiv {
@@ -76,17 +94,6 @@ a{
         }
     }
 
-    a{
-        // position: absolute;
-        bottom: 6px;
-        left: 0;
-        transform: translateX(55%);
-    }
-
-    .changeColor{
-        color: var(--secondary)!important;
-    }
-
     .graph {
         position: absolute;
         bottom: 0;
@@ -135,5 +142,4 @@ a{
         height: 100%;
     }
 }
-
 
