--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -19,10 +19,14 @@
 .info {
     position: absolute;
     left: 2rem;
-    bottom: 0.8rem;
+    bottom: 6px;
     z-index: 10;
     font-size: 12px;
     margin-top: 16px;
+
+    @media (max-width: 1000px) {
+        bottom: 18px;
+    }
 }
 
 .infoContainer {
