--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -37,6 +37,12 @@ a{
 
 .changeColor{
     color: var(--secondary)!important;
+
+
+    @media (max-width: 1000px) {
+        color: var(--primary-light)!important;
+
+    }
 }
 
 .wrapperDiv {
@@ -46,6 +52,7 @@ a{
     height: 100%;
     min-width: 280px;
     cursor: pointer;
+
 
     .wrapper-graph{
         position: relative;
@@ -78,6 +85,7 @@ a{
         width: 50%;
 
 
+
         &::after{
             position: absolute;
             content: '';
@@ -91,6 +99,8 @@ a{
             left: 0;
             right: 0;
             z-index: 1;
+
+       
         }
     }
 
@@ -109,8 +119,10 @@ a{
         border-top-left-radius: 4px;
         border-top-right-radius: 16px;
         z-index: 0;
+
     }
 
+    
     .table {
         position: absolute;
         bottom: 0;
