--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -1,4 +1,4 @@
-:host{
+:host {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -10,29 +10,39 @@
     overflow: auto;
 }
 
-table{
+table {
     width: 100%;
     max-height: 100%;
     overflow: hidden;
-    
-    tr{
-        width: 100%;
 
+    tr {
+        width: 100%;
     }
-    th{
+    th {
         width: 25px;
         text-align: center;
     }
-    td{
+    td {
         font-size: 14px;
-        padding:4px 2px;
+        padding: 4px 2px;
     }
-    
 }
 
-table, th, td {
-    border: 1px solid white;
+table,
+th,
+td {
+    border: 1px solid white collapse;
+    // border-bottom: 1px solid white ;
     text-align: center;
-  }
+    border-spacing: 0;
+}
 
+td {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    border-bottom: 1px solid rgb(200, 199, 199);
+}
 
+th{
+    color: var(--accent2);
+}
