--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -19,13 +19,19 @@
 .info {
     position: absolute;
     left: 2rem;
-    bottom: 6px;
+    bottom: 1em;
     z-index: 10;
     font-size: 12px;
     margin-top: 16px;
 
     @media (max-width: 1000px) {
-        bottom: 18px;
+        bottom: 2em;
+    }
+
+
+    @media (max-width: 400px) {
+        bottom: 1em;
+        left: 1rem;
     }
 }
 
