--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -28,7 +28,6 @@
         bottom: 2em;
     }
 
-
     @media (max-width: 400px) {
         bottom: 1em;
         left: 1rem;
@@ -38,17 +37,14 @@
 .infoContainer {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+    gap: 0.6rem;
     width: 100%;
     flex: 1;
     display: flex;
     margin-top: 26px;
     text-align: justify;
 
-    .icon-web {
-        width: 24px;
-        margin-right: 12px;
-    }
+
 
     a {
         text-decoration: none;
@@ -61,26 +57,41 @@
         word-break: break-word;
     }
 
-    .websiteLink {
-        position: relative;
-        display: flex;
-        align-items: center;
-        color: var(--primary-light);
-        cursor: pointer;
-    }
+
 }
 // below Graph: website & Co.
 .furtherInfos {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 12px;
+    flex-wrap: wrap;
     margin-bottom: 12px;
+
+    .infoWithIcon {
+        position: relative;
+        display: flex;
+        align-items: center;
+        color: var(--primary-light);
+        margin: 0.4em 1em;
+    }
+
+    .websiteLink{
+        cursor: pointer;
+    }
+
+    .icon {
+        width: 24px;
+        margin-right: 6px;
+    }
 
     .detail {
         border-left: 1px solid var(--primary-light);
         margin-left: 8px;
-        padding-left: 12px
+        padding-left: 12px;
+
+        @media (max-width: 700px) {
+            border-left: none;
+        }
     }
 }
 
@@ -107,4 +118,9 @@
     &:hover {
         color: var(--primary-light);
     }
+}
+
+.accentColor {
+    color: var(--accent2);
+    margin-right: 4px;
 }
