improved Layout, changed to Lato Font

--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -44,5 +44,5 @@
 <!-- EUR SECTION -->
 <div class="currencyEUR-container">
     <input [(ngModel)]="priceInEUR" class="inputNumber" type="number" [disabled]="true">
-    <div class="EUR">EUR</div>
+    <div class="EUR">Euro</div>
 </div>
