--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -9,7 +9,7 @@
     height: 50px;
 
     @media (max-width: 800px) {
-        position: relative;
+        // position: fixed;
         width: 100%;
     }
 }
