--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,9 +1,9 @@
-<div class="subline-wrapper">
+<!-- <div class="subline-wrapper">
     <div class="subline">
         SIMPLY TRACK your COINS 
  
     </div>
-</div>
+</div> -->
 
 <h1>TokenX</h1>
 <h1 id="offset">TokenX</h1>
