--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,9 +1,9 @@
     <table class="biggerScreen">
         <tr>
                 <th>Date</th>
-                <th>Price</th>
-                <th>Market Cap</th>
-                <th>Volume</th>
+                <th>Price*</th>
+                <th>Market Cap*</th>
+                <th>Volume*</th>
         </tr>
     
         <tr *ngFor="let date of dates; index as i">
@@ -17,8 +17,8 @@
     <table class="mobileOnly">
         <tr>
                 <th>Date</th>
-                <th>Price</th>
-                <th>Market Cap</th>
+                <th>Price*</th>
+                <th>Market Cap*</th>
         </tr>
     
         <tr *ngFor="let date of dates; index as i">
