--- a/src/app/asset-section/asset-section.component.html
+++ b/src/app/asset-section/asset-section.component.html
@@ -12,7 +12,7 @@
 
     <div class="infoPart">
         <div class="row">
-            <span class="currPrice">Current Price</span>
+            <span class="currPrice">PRICE</span>
             <span class="currPriceNumber">€ {{ currentPrices[i].toFixed(2) }}</span>
             <span 
                 class="changePercent" 
@@ -23,7 +23,7 @@
     </div>
 
     <!-- pos absolute -->
-    <div class="assetName">{{ assetNames[i] | titlecase }}</div>
+    <div class="assetName">{{ assetNames[i] | uppercase }}</div>
 </div>
 
 
