--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -37,9 +37,28 @@
     min-height: 150px;
     margin-top: 22px;
     overflow: hidden;
+    transition: all ease-in-out 150ms;
 
     &:hover{
-        box-shadow: rgb(36, 35, 35) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;    }
+        box-shadow: rgb(36, 35, 35) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;    
+       
+        .rankingNr{
+            color: var(--accent2);
+        }
+
+        .assetName{
+            color: var(--accent2);
+
+            &::after{
+                background-color: var(--accent2);
+            }
+        }
+
+        // .assetName ::after{
+        //     color: var(--accent2);
+        // }
+
+    }
 
     @media (max-width: 1000px) {
         min-width: 200px;
@@ -68,6 +87,7 @@
 
     .currPriceNumber{
         font-size: 16px;
+        font-weight: 600;
     }
 
     .assetName {
@@ -75,6 +95,7 @@
         bottom: 10px;
         left: 10px;
         font-size: 14px;
+        // font-style: to-upper-case($string: "");
         // color: var(--primary-light);
         color: rgb(138, 146, 151);
 
@@ -116,7 +137,7 @@
         right: 12px;
         top: -8px;
         font-size: 44px;
-        color:rgba(138, 146, 151, 0.287);
+        color:rgba(138, 146, 151, 0.466);
         // color: var(--bg);
         // -webkit-text-stroke: 2px var(--bg);
         // filter: drop-shadow(2px 1px 1px #47524f);
