--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -4,15 +4,18 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
+
 }
 
 .graph{
     width: 100%;
     max-width: 960px;
+
     // color: #12bb889d;
 }
 
 canvas{
     max-width: 100%;
+    max-height: 45vh;
     flex: 1;
 }
