--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -29,23 +29,25 @@
             </div>
             <div *ngIf="lowestPrice" class="infoWithIcon">
                 <img class="icon" src="assets/img/high.png" alt="icon-high">
-                <span class="accentColor">24h-High:</span>
+                <span class="accentColor">24h-High </span>
                   € {{ highestPrice }}
             </div>
 
             <div *ngIf="highestPrice" class="infoWithIcon">
                 <img class="icon" src="assets/img/low.png" alt="icon-low">
-                <span class="accentColor">24h-Low:</span>
+                <span class="accentColor">24h-Low </span>
                   € {{ lowestPrice }}
             </div>
         </div>
 
-
-        <div class="shortText desktopOnly"> {{ fulltextOpen ? assetInfotext : assetInfotext | slice:0:1000 }} 
+        <!-- TEXT ASSET -->
+        <div class="shortText desktopOnly"> 
+            {{ fulltextOpen ? assetInfotext : assetInfotext | slice:0:300}} 
             <span *ngIf="!fulltextOpen" (click)="fullText('open')" class="readMore">... read more</span>
             <span *ngIf="fulltextOpen" (click)="fullText('close')" class="readMore">... show less</span>
-
         </div>
+
+        <!-- [innerHtml]="html | htmldecoder" -->
 
         <div class="shortText mobileOnly"> {{ fulltextOpen ? assetInfotext : assetInfotext | slice:0:300 }}
             <span *ngIf="!fulltextOpen" (click)="fullText('open')" class="readMore">... read more</span>
