--- a/src/app/sidebar-mobil/sidebar-mobil.component.scss
+++ b/src/app/sidebar-mobil/sidebar-mobil.component.scss
@@ -18,23 +18,24 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 100%;
+    max-width: 100%;
     height: 100%;
 
-    &:after{
-        content: '';
-        position: absolute;
-        width: 26px;
-        background-color: var(--primary-light);
-        height: 44px;
-        bottom: 0;
-        z-index: 2;
+    // &:after{
+    //     content: '';
+    //     position: absolute;
+    //     width: 26px;
+    //     background-color: var(--primary-light);
+    //     height: 44px;
+    //     bottom: 0;
+    //     z-index: 2;
 
-        right: 0;
-        }
+    //     right: 0;
+    //     }
 }
 
 h1 {
-    position: absolute;
+    // position: absolute;
     left: -30px; 
     top: -30px;
     font-size: 84px;
