--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -1,3 +1,10 @@
 <div class="graph">
-    <canvas id="mycanvas">{{chart}}</canvas>
+    <canvas 
+    #mycanvas 
+    baseChart 
+    id="mycanvas"
+    chartType="line"
+    >
+    {{chart}}
+</canvas>
 </div>
