--- a/src/app/sidebar-mobil/sidebar-mobil.component.html
+++ b/src/app/sidebar-mobil/sidebar-mobil.component.html
@@ -1,10 +1,18 @@
 <div class="wrapper">
+
     <h1>TokenX</h1>
-<!--     
-    <div class="subline-wrapper">
-        <div class="subline">
-            SIMPLY TRACK your COINS
-        </div>
-    </div> -->
-    
+    <div class="subline"> 
+        <span>
+            SIMPLE
+        </span>
+        <span>
+            CRYPTO
+        </span>
+        <span>
+            TRACKING
+        </span>
+          
+
+</div>
+
 </div>
