--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -32,6 +32,7 @@ h1 {
     bottom: 0;
     color: rgba(245, 245, 245, 0);
     font-size: 172px;
+    font-weight: 900;
     transform: translateX(-46px);
     -webkit-text-stroke: 1px rgb(175, 169, 169);
 }
