--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 :host {
+    position: relative;
     background-color: var(--bg);
     display: flex;
     justify-content: flex-start;
@@ -7,7 +8,7 @@
     width: 100%;
     overflow: hidden;
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1100px) {
         height: max-content;
     }
 }
@@ -23,17 +24,20 @@
     width: 100%;
     max-width: 100%;
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1100px) {
         flex-direction: column;
         height: max-content;
         margin-right: 2em;
         margin-left: 2em;
-        margin-top: 100px;
+        margin-top: 150px;
     }
+
+
+
     @media (max-width: 500px) {
         margin-right: 1em;
-        margin-left: 1em;
-        margin-top: 120px;
+        margin-left: 0;
+        margin-top: 155px;
     }
 }
 
