--- a/src/app/asset-section/asset-section.component.scss
+++ b/src/app/asset-section/asset-section.component.scss
@@ -10,7 +10,7 @@
     height: 100%;
     overflow: auto;
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1100px) {
         width: 100%;
         max-width: unset;
         flex-direction: row;
@@ -60,20 +60,24 @@
 
     }
 
-    @media (max-width: 1000px) {
+    @media (max-width: 1100px) {
         min-width: 200px;
         flex: 1;
         max-width: 260px;
-        margin: 0px 8px 20px 8px;
+        margin: 0px 0px 20px 12px;
     }
 
     @media (max-width: 500px) {
-        margin: 0px 4px 20px 4px;
+        margin: 0px 0px 20px 12px;
+        width: 90%;
+        max-width: 400px;
+        min-height: 200px;
     }
 
     @media (max-width: 350px) {
-        margin: 0px 4px 20px 4px;
+        margin: 0px 0px 20px 12px;
         width: 90%;
+        max-width: 350px;
     }
 
     &:first-child {
@@ -95,8 +99,6 @@
         bottom: 10px;
         left: 10px;
         font-size: 14px;
-        // font-style: to-upper-case($string: "");
-        // color: var(--primary-light);
         color: rgb(138, 146, 151);
 
 
@@ -104,7 +106,6 @@
             content: "";
             width: 250px;
             height: 1px;
-            // background-color: var(--primary-light);
             background-color: rgb(138, 146, 151);
             position: absolute;
             top: 48%;
@@ -137,12 +138,8 @@
         right: 12px;
         top: -8px;
         font-size: 44px;
+        font-weight: var(--font-bold);
         color:rgba(138, 146, 151, 0.466);
-        // color: var(--bg);
-        // -webkit-text-stroke: 2px var(--bg);
-        // filter: drop-shadow(2px 1px 1px #47524f);
-
-        // letter-spacing: -6px;
     }
 }
 
