--- a/src/app/graph/graph.component.scss
+++ b/src/app/graph/graph.component.scss
@@ -4,18 +4,25 @@
     flex-direction: column;
     align-items: center;
     flex: 1;
-
 }
 
 .graph{
     width: 100%;
+    height: 100%;
     max-width: 960px;
+    max-height: 40vh;
+    flex: 1;
 
-    // color: #12bb889d;
+    @media (min-width: 1000px) {
+        max-height: 60vh;   
+     }
 }
 
 canvas{
+    width: 100%;
+    height: 100%;
+    height: 100%;
+    max-height: 100%;
     max-width: 100%;
-    max-height: 45vh;
     flex: 1;
 }
